# senior-back-end-rust

./: .env.example  Cargo.toml  LICENSE  Makefile.toml  README.org
crates/jayden_api/: Cargo.toml
crates/jayden_bin/: Cargo.toml
crates/jayden_bin/src/: main.rs
crates/jayden_core/: Cargo.toml
crates/jayden_core/src/: cfgs.rs  context.rs  errs.rs  lib.rs  resps.rs
crates/jayden_core/src/utils/: validation.rs
crates/jayden_domain/: Cargo.toml
crates/jayden_gateway/: Cargo.toml
crates/jayden_gateway/src/: main.rs
crates/jayden_infrastructure/: Cargo.toml
crates/jayden_infrastructure/migrations/: 0001_initial.sql  0001_scheme.sql  0002_user.sql  0003_post.sql  0004_constraint.sql
crates/jayden_infrastructure/src/: lib.rs
crates/jayden_services/user_srv/: Cargo.toml
crates/jayden_services/user_srv/src/models/: mod.rs  requests.rs  responses.rs
deploy/: docker-compose.postgres.yml
src/: lib.rs  main.rs
