[package]
name = "jayden_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.7.2"
chrono = "0.4.31"
config = "0.13.4"
dotenv = "0.15.0"
http-serde = "2.0.0"
redis = "0.24.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres"] }
thiserror = "1.0.50"
validator = "0.16.1"
